Summary of important user-visible changes for generate_html 0.1.4:
-------------------------------------------------------------------

 ** HTML pages with documentation of each function now mention the
    package that the function belongs too and have a link for the
    package main page.

 ** keywords on the `See also:' will be interpreted properly (rather
    than just function names).